--- a/4-mycarvalue/package.json
+++ b/4-mycarvalue/package.json
@@ -14,11 +14,11 @@
     "start:debug": "cross-env NODE_ENV=development start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "cross-env NODE_ENV=test jest",
-    "test:watch": "cross-env NODE_ENV=test jest --watch",
-    "test:cov": "cross-env NODE_ENV=test jest --coverage",
-    "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json"
+    "test": "cross-env NODE_ENV=test jest --maxWorkers=1",
+    "test:watch": "cross-env NODE_ENV=test jest --watch --maxWorkers=1",
+    "test:cov": "cross-env NODE_ENV=test jest --coverage --maxWorkers=1",
+    "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --maxWorkers=1",
+    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --maxWorkers=1"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
