--- a/4-mycarvalue/package.json
+++ b/4-mycarvalue/package.json
@@ -18,10 +18,14 @@
     "test:watch": "cross-env NODE_ENV=test jest --watch --maxWorkers=1",
     "test:cov": "cross-env NODE_ENV=test jest --coverage --maxWorkers=1",
     "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --maxWorkers=1",
-    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --maxWorkers=1"
+    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --maxWorkers=1",
+    "typeorm": "cross-env NODE_ENV=development CLI=true typeorm-ts-node-commonjs",
+    "typeorm:generate": "cross-env npm run typeorm -- --dataSource datasource-typeorm-cli.ts migration:generate migrations/",
+    "typeorm:run": "cross-env npm run typeorm -- --dataSource datasource-typeorm-cli.ts migration:run"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
