--- a/5-mycarvalueembelished/package.json
+++ b/5-mycarvalueembelished/package.json
@@ -20,7 +20,7 @@
     "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --maxWorkers=1",
     "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --maxWorkers=1",
     "typeorm": "cross-env NODE_ENV=development CLI=true typeorm-ts-node-commonjs",
-    "typeorm:generate": "cross-env npm run typeorm -- --dataSource datasource-typeorm-cli.ts migration:generate migrations/",
+    "typeorm:generate": "cross-env npm run typeorm -- --dataSource datasource-typeorm-cli.ts migration:generate ./migrations/",
     "typeorm:run": "cross-env npm run typeorm -- --dataSource datasource-typeorm-cli.ts migration:run"
   },
   "dependencies": {
